--- a/_til_docs/Vue.html
+++ b/_til_docs/Vue.html
@@ -512,7 +512,7 @@
 <h3 id="testing-with-vuetify">Testing with Vuetify <a class="heading-anchor-permalink" href="#testing-with-vuetify">#</a></h3>
 <p>You can access <code>Vuetify</code> components specifically with <code>wrapper.find({name: &lt;ComponentName&gt;})</code> but this seems to not work sometimes. It may be a much better practice to just put a <code>.v-&lt;component&gt;-test</code> class on the <code>Vuetify component</code> for matching</p>
 <p>After trying it out this is a <strong>much</strong> better approach</p>
-<p>Test for CI/CD</p>
+<p>Test for CI/CD!</p>
 
       </article>
     </div>
