Update error page to link correctly

--- a/WebsiteError.html
+++ b/WebsiteError.html
@@ -4,8 +4,5 @@
 </head>
 <body>
   <h1 style="color: red;">Resource not found</h1>
-  <p>
-    Please navigate to the<a href="www.seanrichtil.com">homepage</a> to see the
-    webpage.
-  </p>
+  <p>Please navigate to the <a href="/"> homepage</a> to see the webpage.</p>
 </body>
