Add toggling for subdirectories

--- a/_til_docs/Entrepreneurship/Aquired_Episodes.html
+++ b/_til_docs/Entrepreneurship/Aquired_Episodes.html
@@ -548,30 +548,149 @@
 <li><a class="" href="../Django.html">Django</a></li>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="active" href="Aquired_Episodes.html">Aquired Episodes</a></li>
 </ul>
 <li><a class="" href="../Frontend.html">Frontend</a></li>
 <li><a class="" href="../JavaScript.html">JavaScript</a></li>
 <li><a class="" href="../Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="IP_Addresses.html">IP Addresses</a></li>
-<li><a class="active" href="IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
 </ul>
 <li><a class="" href="../Vue.html">Vue</a></li>
 <li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
       </nav>
       <article id="main" class="content">
-        <p>[[IP_Addresses]]	]]</p>
-<h3 id="subnets">Subnets <a class="heading-anchor-permalink" href="#subnets">#</a></h3>
-<p>Subnets allow you to divide the 16 bits of <code>Host ID</code> even further into a <code>Subnet ID</code> and a smaller <code>Host ID</code>. For example, 8 of these 16 bits can then become a <code>Subnet ID</code> with the last 8 being the <code>Host ID</code>. This allows network administrators to divide up the IP address (<code>Network ID</code>) they are assigned into 254 subnets with a maximum of 254 subnets per host. In this case <code>140.2.1.12</code> would be broken up as follows: <code>140.2</code> for the <code>Network ID</code>, <code>1</code> for the <code>Subnet ID</code> and <code>12</code> for the <code>Host ID</code>.</p>
-<h3 id="subnet-masks">Subnet Masks <a class="heading-anchor-permalink" href="#subnet-masks">#</a></h3>
-<p>While in the previous examles the <code>Subnet ID</code> only occupied 8 bits and the <code>Host ID</code> occupied the last 8 bits, this is not always true. The <code>Subnet Mask</code> determines which bits correspond to the <code>Network ID</code> and <code>Subnet ID</code> and which bits corresond for the <code>Host ID</code>. It is represented as follows: for each bit NOT corresponding to a <code>Host ID</code> it is set to one. For each bit corresponding to the <code>Host ID</code> it is set to 0. In the above example, the <code>Subnet Mask</code> would be 24 1’s followed by 8 0’s.</p>
-<p>This case would be represented in dotted notation as <code>255.255.255.0</code> or in Hex as <code>0xffffff00</code>. Different breaks between <code>Subnet ID</code> and <code>Host ID</code> can be described by different subnet masks. Subnets and Subnet Masks allow IP routing tables to be much smaller as only one entry is needed for the router to each subnet instead of a list of all machines on the network.</p>
+        <h1 id="table-of-contents">Table of Contents <!-- omit in toc --> <a class="heading-anchor-permalink" href="#table-of-contents">#</a></h1>
+<ul>
+<li><a href="#zoom">Zoom</a></li>
+<li><a href="#spacex">SpaceX</a></li>
+<li><a href="#google-maps">Google Maps</a></li>
+<li><a href="#wework">WeWork</a></li>
+<li><a href="#sequoia-capital">Sequoia Capital</a></li>
+<li><a href="#whatsapp">WhatsApp</a></li>
+<li><a href="#the-lean-startup-and-ltse">The Lean Startup and LTSE</a></li>
+<li><a href="#tiktok">TikTok</a></li>
+<li><a href="#disney-plus">Disney Plus</a></li>
+<li><a href="#venmo">Venmo</a></li>
+<li><a href="#netflix">Netflix</a></li>
+<li><a href="#tesla">Tesla</a></li>
+</ul>
+<h2 id="zoom">Zoom <a class="heading-anchor-permalink" href="#zoom">#</a></h2>
+<ul>
+<li>Founder/CEO: Eric Yuan</li>
+<li>Focusing on education allows you to continue to capture that value as students graduate into the workforce and bring your product with it</li>
+<li>Big markets (e.g. video conferencing) go through cycles where a new way of deliverying content/improving the product can unseat incumbents</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="spacex">SpaceX <a class="heading-anchor-permalink" href="#spacex">#</a></h2>
+<ul>
+<li>Cut all the subcontractors to the subcontractors to the subcontractors out of the aerospace market to remove dead weight and accumulating cost-plus pricing (where everyone takes 30%)
+<ul>
+<li>Reduced cost by a factor of 10</li>
+<li>If you ever see a cost-plus model run: they have an incentive to make something as expensive as possible</li>
+</ul>
+</li>
+<li>Green-lighted falcon 9 (9 Merlin engines) before Falcon 1 even succeeded
+<ul>
+<li>Engine was brilliantly designed to be modular so this could be possible</li>
+</ul>
+</li>
+<li>Investing 10’s of billions into Starlink - a consortium of 12,000 LEO satellites to provide low-cost internet all over the globe
+<ul>
+<li>Traditionally satellite internet has come from GEO satellites and thus is much slower</li>
+</ul>
+</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="google-maps">Google Maps <a class="heading-anchor-permalink" href="#google-maps">#</a></h2>
+<h2 id="wework">WeWork <a class="heading-anchor-permalink" href="#wework">#</a></h2>
+<ul>
+<li>Founder/CEO: Adam Neumann
+<ul>
+<li>Refused to give up any control</li>
+<li>Tanked his own company</li>
+</ul>
+</li>
+<li>VC’s - especially Softbank’s vision fund - were willing to dump capital in this because they needed to offload funds and they were securing the assets against office buildings</li>
+<li>Softbank inflated value so much since they were the only ones willing to invest, IPO got canceled, terrible terrible management story</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="sequoia-capital">Sequoia Capital <a class="heading-anchor-permalink" href="#sequoia-capital">#</a></h2>
+<ul>
+<li>Founder: Don Valentine
+<ul>
+<li>Basically helped revolutionize the VC industry</li>
+</ul>
+</li>
+<li>Focuses on huge market potential and huge ideas, founders kind of second since they can always supplement help</li>
+<li>Refer to investments as <em>partnerships</em> to build great companies with</li>
+<li>In the dot-com crash Sequoia <strong>refused</strong> to let the fund lose money - cutting management fees and devoting a ton of effort to salvaging returns - over a matter of principle
+<ul>
+<li>This developed a ton of customer loyalty and a huge respect for the firm</li>
+</ul>
+</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="whatsapp">WhatsApp <a class="heading-anchor-permalink" href="#whatsapp">#</a></h2>
+<ul>
+<li>Founder: Jan Koum</li>
+<li>Nailed product/market fit + value proposition -&gt; send messages to people across the globe for $.99 instead of the ridiculous plans telephone providers offered
+<ul>
+<li>Text messages were actually limited to 120 characters because that was the extra space available in consistent pings from network towers to cell phones. Therefore text messages offered NO additional cost to the telephone providers</li>
+</ul>
+</li>
+<li>$22 billion acquisition that has yet to be monetized but was a great takeout play by Facebook</li>
+<li>Hated advertising on the platform and got in a HUGE fight with Facebook over this, leaving like $800 million on the table</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="the-lean-startup-and-ltse">The Lean Startup and LTSE <a class="heading-anchor-permalink" href="#the-lean-startup-and-ltse">#</a></h2>
+<h2 id="tiktok">TikTok <a class="heading-anchor-permalink" href="#tiktok">#</a></h2>
+<h2 id="disney-plus">Disney Plus <a class="heading-anchor-permalink" href="#disney-plus">#</a></h2>
+<ul>
+<li>CEO: Bob Iger
+<ul>
+<li>Transformed the way Disney was run and brought them out of their dark days</li>
+<li>Acquired Pixar, Lucas Films, Fox, to bring great animation technology and IP into the studio</li>
+</ul>
+</li>
+<li>The Disney flywheel - centering around content creation - allows them to draw a significant amount of extra revenue from merchandising, parks, etc. from their IP.</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="venmo">Venmo <a class="heading-anchor-permalink" href="#venmo">#</a></h2>
+<ul>
+<li>Founder/CEO: Andrew Kortina</li>
+<li>There is no business model on peer-to-peer payments since cash is free
+<ul>
+<li>The only business model is attracting peer-to-peer customers to incentivize merchants to use your platform as a payments option and take a cut
+<ul>
+<li>The PayPal business model</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Acquired by Braintree (for not that much) then PayPal and would not have survived without acquisitions</li>
+<li>Did a really weird and random marketing stunt - Brian uses venmo - where people had no idea who Brian was and thus it went viral</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="netflix">Netflix <a class="heading-anchor-permalink" href="#netflix">#</a></h2>
+<ul>
+<li>CEO: Reid Hastings</li>
+<li>Two separate eras: DVD rental and streaming</li>
+<li>Team mentality - not a family - if you are not performing they will have to let you go because it’s not fair to the rest of the team</li>
+<li>Blockbuster actually had great management but corporate raider Carl Icahn kicked out CEO over comp. dispute and installed new guy who “didn’t believe in internet businesses” and wanted to bring back the hayday of brick and mortar stores lol
+<ul>
+<li>Blockbuster online was going to beat Netflix - Netflix even capitulated and offered to sell to Blockbuster - before this self-inflicted wound happened</li>
+</ul>
+</li>
+</ul>
+<p><a href="#table-of-contents">Back to top</a></p>
+<h2 id="tesla">Tesla <a class="heading-anchor-permalink" href="#tesla">#</a></h2>
 
       </article>
     </div>
