--- a/_til_docs/Python.html
+++ b/_til_docs/Python.html
@@ -718,7 +718,9 @@ def printWord(word):
       keys: [
         "content",
         "path"
-      ]
+      ],
+      distance: 100000,
+      threshold: .25,
     };
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
@@ -765,6 +767,7 @@ def printWord(word):
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
+      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
