--- a/_til_docs/Django.html
+++ b/_til_docs/Django.html
@@ -756,7 +756,9 @@ b.save()
       keys: [
         "content",
         "path"
-      ]
+      ],
+      distance: 100000,
+      threshold: .25,
     };
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
@@ -803,6 +805,7 @@ b.save()
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
+      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
