--- a/_til_docs/Vue.html
+++ b/_til_docs/Vue.html
@@ -704,7 +704,9 @@
       keys: [
         "content",
         "path"
-      ]
+      ],
+      distance: 100000,
+      threshold: .25,
     };
     let searchFuse;
     const searchResultsDiv = document.getElementById("search-result-links");
@@ -751,6 +753,7 @@
     }
     loadJSON("/contents.json", (data) => {
       contentsData = data.contents;
+      console.log(contentsData);
       searchFuse = new Fuse(contentsData, fuseOptions);
     }, (fail) => console.error(fail));
 
