--- a/_til_docs/index.html
+++ b/_til_docs/index.html
@@ -659,8 +659,9 @@
 
     </article>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.0.4"></script>
-
+<!--   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.0.4"></script>
+ -->
+  <script src="fuse.js"></script>
   <script>
     // Load contents.json if you need it
     let headingClassName = "heading";
