Use full path for fuse.js script source

--- a/_til_docs/Frontend.html
+++ b/_til_docs/Frontend.html
@@ -649,9 +649,16 @@
 
     </article>
   </div>
-<!--   <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.0.4"></script>
- -->
-  <script src="fuse.js"></script>
+
+  <!-- Uncomment the following line to use the fuse.js CDN instead of downloading it locally -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.0.4"></script> -->
+
+
+  <!-- For faster load times download fuse.js from https://unpkg.com/fuse.js@6.0.4/dist/fuse.js
+      and save it in the same directory as this template.html file. Uncomment the following line
+      if fuse is downloaded locally and comment out the CDN fuse.js line above
+  -->
+  <script src="/fuse.js"></script>
   <script>
     // Load contents.json if you need it
     let headingClassName = "heading";
