--- a/til_docs/template.html
+++ b/til_docs/template.html
@@ -629,7 +629,7 @@
       and save it in the same directory as this template.html file. Uncomment the following line
       if fuse is downloaded locally and comment out the CDN fuse.js line above
   -->
-  <script src="fuse.js"></script>
+  <script src="/fuse.js"></script>
   <script>
     // Load contents.json if you need it
     let headingClassName = "heading";
